--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
 	"keywords": ["log", "log system"],
     "homepage": "https://webplace.net.ua",
     "type": "library",
-    "version": "1.1.0",
 	"license": "MIT",
     "authors": [
         {
@@ -21,7 +20,7 @@
     },
     "repositories": [
         {
-            "packagist": false,
+            "packagist": true,
             "type": "vcs",
             "url": "https://github.com/Alex-M0/Logger.git"
         }
